# yapperai

./: .commitlintrc.js  .env-cmdrc  .gitignore  .lintstagedrc  .markdownlint.json  .npmignore  .npmrc  .prototools  .taurignore  .ts-prunerc  .yaml-lint.json  LICENSE.md  README.md  RELEASES.md  SECURITY.md  babel.config.js  biome.json  buf.gen.yaml  buf.yaml  cspell.json  esbuild.mjs  global.d.ts  index.html  jest.config.js  lintstaged.config.ts  moon.yml  package.json  pnpm-workspace.yaml  postcss.config.cjs  react-router.config.ts  react-router.env.d.ts  renovate.json  tailwind.config.ts  transform.js  tsconfig.json  tsdoc.json  typedoc.json  types.d.ts  update.json  vite.config.ts  (+1 more)
.cspell/: dictionary
.github/: code-style.md  copilot-instructions.md
.github/workflows/: stale.yml
.husky/: pre-commit
backend/: update.json
client/: root.tsx  routes.ts
client/api/: index.ts
client/components/: chat-message.tsx  chat-sidebar.tsx  container.tsx  link.tsx  logo.tsx  splash.tsx  titlebar.tsx  tray.tsx
client/layouts/: default.tsx  endpoint.tsx
client/pages/: 404.tsx  chat.tsx  content.tsx  home.tsx  plugins.tsx  settings.tsx  splits.tsx
client/partials/: content.tsx  footer.tsx  header.tsx  sidebar.tsx
isolation-dist/: index.html  index.js
lunarbuf/: README.md  package.json  tsconfig.json  vite.config.ts
public/: _redirects  robots.txt
services/: authProvider.ts  connect.ts  download.ts  socket.ts  upload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: env.rs  extism.rs  info.rs  lib.rs  main.rs  math.rs  plugins.rs  request.rs  splash.rs  sql.rs  state.rs  store.rs  update.rs  utils.rs
state/: bears.tsx  chat.tsx
store/: cookie.ts  session.ts  sql.ts
types/: environment.d.ts  state.ts
utils/: api-request.ts  get-api-url.ts  helper.ts  logger.ts  page-title.ts  zod.ts
(+50 files in other folders)
