[package]
name = "yapperai"
version = "0.1.0"
description = "A Tauri App"
authors = ["shmor3"]
edition = "2021"

[lib]
name = "yapperai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-log = "2"
once_cell = "1.18.0"
parking_lot = "0.12"
thiserror = "1.0"
serde_json = "1"
futures = "0.3"
extism = "1.0.0"
extism-convert = "1.11.1"
# tracing = "0.1"
log = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
